# HBM-SIM

./: CMakeLists.txt  DRAMSysRecordable.cpp  LengthConverter.cpp  README.md  plot_trace.py  trace-reader.py
benchmarks/: benchmark.cpp  butterfly2x2Benchmark.cpp  butterfly8x8Benchmark.cpp
config/: configuration.json
config-8GB/DRAMSys/configs/mcconfigs/: fr_fcfs.json
config-8GB/DRAMSys/configs/memspecs/: HBM2.json
config-8GB/DRAMSys/configs/simulator/: hbm2_0.json  hbm2_1.json  hbm2_10.json  hbm2_11.json  hbm2_12.json  hbm2_13.json  hbm2_14.json  hbm2_15.json  hbm2_3.json  hbm2_5.json  hbm2_7.json  hbm2_8.json  (+1 more)
config-8GB/DRAMSys/simulations/: hbm2-example_0.json  hbm2-example_1.json  hbm2-example_11.json  hbm2-example_15.json  hbm2-example_2.json  hbm2-example_4.json  hbm2-example_5.json  hbm2-example_6.json  hbm2-example_7.json  hbm2-example_9.json
config/DRAMSys/simulations/: hbm2-example_10.json  hbm2-example_12.json  hbm2-example_13.json  hbm2-example_14.json  hbm2-example_3.json  hbm2-example_8.json
eval/plots/: butterflyEvalution.ipynb  evalution.ipynb
eval/plots/.ipynb_checkpoints/: evalution-checkpoint.ipynb
include/: Clock.hpp  MAO.hpp  MemoryManager.hpp  Switch.hpp  XilinxMAO.hpp  XilinxMemoryController.hpp  XilinxSwitch.hpp
include/butterfly/: Butterfly2x2MAO.hpp  Butterfly8x8MAO.hpp  ButterflySwitch.hpp
include/cpu/: CPU.hpp  GenericCPU.hpp  RW_RandomCPU.hpp  RW_StrideCPU.hpp  RandomCPU.hpp  StrideCPU.hpp  Terminator.hpp
src/: Clock.cpp  MAO.cpp  MemoryManager.cpp  Switch.cpp  XilinxMAO.cpp  XilinxMemoryController.cpp  XilinxSwitch.cpp  configuration.json  configuration.json.bak
src/butterfly/: Butterfly2x2MAO.cpp  Butterfly8x8MAO.cpp  ButterflySwitch.cpp
src/cpu/: CPU.cpp  GenericCPU.cpp  RW_RandomCPU.cpp  RW_StrideCPU.cpp  RandomCPU.cpp  StrideCPU.cpp  Terminator.cpp
traces/: ch_0-r.csv  ch_0-w.csv  ch_2-r.csv  ch_2-w.csv  ch_3-w.csv  ch_4-w.csv  ch_6-r.csv  ch_6-w.csv  ch_7-w.csv
traces/insert_sort/: ch_0-r.csv  ch_0-w.csv  ch_1-r.csv  ch_1-w.csv  ch_2-r.csv  ch_2-w.csv  ch_3-r.csv  ch_3-w.csv  ch_4-r.csv  ch_4-w.csv  ch_5-r.csv  ch_5-w.csv  ch_6-r.csv  ch_6-w.csv  ch_7-r.csv  ch_7-w.csv
traces/mat_mul/: ch_0-r.csv  ch_0-w.csv  ch_1-r.csv  ch_1-w.csv  ch_2-r.csv  ch_2-w.csv  ch_3-r.csv  ch_3-w.csv  ch_4-r.csv  ch_4-w.csv  ch_5-r.csv  ch_5-w.csv  ch_6-r.csv  ch_6-w.csv  ch_7-r.csv  ch_7-w.csv
traces/yolo/: ch_0-r.csv  ch_0-w.csv  ch_1-r.csv  ch_1-w.csv  ch_3-r.csv  ch_4-r.csv  ch_5-r.csv  ch_5-w.csv  ch_7-r.csv  ch_7-w.csv
(+18 files in other folders)
